[gd_scene load_steps=3 format=3 uid="uid://cg6l5q4ht0svk"]

[ext_resource type="Script" path="res://scripts/objeto1.gd" id="1_ac2yg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jjt40"]
radius = 9.0

[node name="Node2D" type="Node2D"]

[node name="objeto1" type="Area2D" parent="." groups=["objeto"]]
script = ExtResource("1_ac2yg")

[node name="Sprite2D" type="Sprite2D" parent="objeto1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="objeto1"]
shape = SubResource("CircleShape2D_jjt40")

[connection signal="body_entered" from="objeto1" to="objeto1" method="_on_body_entered"]
[connection signal="body_exited" from="objeto1" to="objeto1" method="_on_body_exited"]
[connection signal="input_event" from="objeto1" to="objeto1" method="_on_input_event"]
[connection signal="ready" from="objeto1" to="objeto1" method="_on_ready"]
